Resized & modernized some images

--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@
 
               <!--Content-->
               <div id="covers" class="tabcontent p-10">
-                <img class="mx-auto pb-5" src="images/Playlist Covers.png" alt="Picture of Spotify playlist covers" width="200">
+                <img class="rounded-md mx-auto pb-5" src="images/Playlist Covers.png" alt="Picture of Spotify playlist covers" width="350">
                 <p>Used Figma to understand the different frames and componants used in design to create comprehensive looking
                   elements. This is a project I did for fun to make custom spotify playlist covers. 
                 </p>
               </div>
 
               <div id="mPlayer" class="tabcontent p-10">
-                <img class="mx-auto pb-5" src="images/Music Player.png" alt="Music Player Mock up" width="200">
+                <img class="rounded-md mx-auto pb-5" src="images/Music Player.png" alt="Music Player Mock up" width="500">
                 <p>I used figma and thier prototyping feature to design a rough mock up
                   of a music streaming service. I mainly did this to test out animations and UI design.
                 </p>
               </div>
 
                 <div id="portfolio" class="tabcontent p-10">
-                  <img class="mx-auto pb-5" src="images/Portfolio (mobile).png" alt="Website Portfolio Mobile Version" width="200">
+                  <img class="rounded-md mx-auto pb-5" src="images/Portfolio (mobile).png" alt="Website Portfolio Mobile Version" width="400">
                   <p>I used figma to design the portfolio you are currently on. 
                     I decided to design the mobile version first because it is easier to scale up to a desktop view.
                     Going from my figma design into the website view, there are some drastic changes because this was mainly 
@@ -264,7 +264,7 @@
               </div> 
 
               <div id="postogonSet" class="tabcontent p-10">
-                <img class="mx-auto pb-5" src="images/Settings (full).png" alt="Settings image" width="200">
+                <img class="rounded-md mx-auto pb-5" src="images/Settings (full).png" alt="Settings image" width="200">
                 <p>
                   I was helping my friend and his team build a social media website. What I was tasked on doing
                   was developing the front end of the settings page. With help from him and some other team members 
