--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <!--Github-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="Github" width="80">
+                  <img class="rounded-full mx-auto" src="images/Github.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
                 </div class="mb-5">
                 <!--Figma-->
@@ -318,7 +318,7 @@
                   </a>
                   <a href="https://github.com/amuwhao46" target="_blank">
                   <div class="m-5 hover:text-green-300">
-                    <img class="rounded-full mx-auto border border-black" src="images/GitHub.svg" alt="Github" width="50">
+                    <img class="rounded-full mx-auto border border-black" src="images/Github.svg" alt="Github" width="50">
                     <p class="pt-2 text-sm">Github</p>
                   </div>
                   </a>
