--- a/index.html
+++ b/index.html
@@ -65,17 +65,16 @@
             </div>
             <!--Content-->
             <div id="About" class="tabcontent">
-              <p class="mb-20 px-10">Hello! My name is Oke-Oghene Amuwha, but I normally go by Oke Amuwha. 
-                I was born in Nigeria and moved to the United States in 2004. Currently I am a student at Wayne State University pursuing 
-                my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning
-                or front end development.
+              <p class="mb-20 px-10">Hello! My name is Oke Amuwha. I am currently a junior at Wayne State University pursuing 
+                my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
+                front end development or UI/UX design.
               </p>
             </div>
             <div id="Interests" class="tabcontent">
               <p class="mb-20 px-10">I've always had an interest in how and why stuff just seems to work.
                 When I was younger I would always look up at the stars in amazement at whats out there. Constantly
-                learning about deep space and the mysteries thats out there. Nowawdays that sense of wonder has come rocketing 
-                home. I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
+                learning about deep space and the mysteries thats out there. 
+                Nowawdays I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
                 we interface with. How is it that a certain vibration of particles makes the mind interpret it as music?
                 Likewise, how does tapping a certain part of my phone display cause the flashlight to light up?
                 I believe we will have, at the very least, the beginnings of an understanding of the hard problem of consciousness.
@@ -292,7 +291,7 @@
                 </div>
                 <div>
                   <div class="w-40 h-40 rounded-full bg-white mx-auto">
-                    <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" enable-background="new 0 0 300 300" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
+                    <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
                     <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
                     </svg></div>
                   <p class="pt-2 text-lg">Postogon</p>
@@ -346,7 +345,7 @@
         }
       }
       
-      /*Show/hide navigation systems*/
+      /*Show/hide nav links in mobile view*/
       document.addEventListener('DOMContentLoaded', function() {
       let menu = document.getElementById('content');
 
@@ -357,6 +356,7 @@
     </script>
     <!--Javascript Tabs-->
     <script>
+      /*Controls tabs showing*/
       function aboutSec(evt, tabType) {
         let i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tabcontent");
