--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Oke Amuwha</title>
+    <link rel="icon" href="images/Logo.png" type="image/png"> <!--Favicon-->
   </head>
 
   <!--Body-->
