--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Oke Amuwha</title>
-    <link rel="icon" href="images/Logo.png" type="image/png"> <!--Favicon-->
+    <link rel="icon" href="images/Favicon.png" type="image/png"> <!--Favicon-->
   </head>
 
   <!--Body-->
