--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> <!--Tailwind-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -278,25 +279,48 @@
             <div class="bg-blue-600 text-white rounded-lg p-10">
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                <div>
-                  <div>
-                    <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
-                  </div>
-                  <p class="pt-2 text-lg">Allstate</p>
+                <!--Job tabs (Fullscreen)-->
+                <div class="fullScreen">
+                  <!--Allstate-->
+                  <button class="tabHeader" onclick="workSec(event, 'allstate')">
+                    <div class="hover:text-green-300">
+                      <div>
+                        <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
+                      </div>
+                      <p class="pt-2 text-lg">Allstate</p>
+                    </div>
+                  </button>
                 </div>
-                <div>
-                  <div>
-                    <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
-                  </div>
-                  <p class="pt-2 text-lg">Apple</p>
+
+                <div class="fullScreen">
+                  <!--Apple-->
+                  <button class="tabHeader" onclick="workSec(event, 'apple')">
+                    <div class="hover:text-green-300">
+                      <div>
+                        <div>
+                          <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
+                        </div>
+                        <p class="pt-2 text-lg">Apple</p>
+                      </div>
+                    </div>
+                  </button>
                 </div>
-                <div>
-                  <div class="w-40 h-40 rounded-full bg-white mx-auto">
-                    <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                    <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                    </svg></div>
-                  <p class="pt-2 text-lg">Postogon</p>
+
+                <div class="fullScreen">
+                  <!--Postogon-->
+                  <button class="tabHeader" onclick="workSec(event, 'apple')">
+                    <div class="hover:text-green-300">
+                      <div>
+                        <div class="w-40 h-40 rounded-full bg-white mx-auto">
+                          <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
+                          <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
+                          </svg></div>
+                        <p class="pt-2 text-lg">Postogon</p>
+                      </div>
+                    </div>
+                  </button>
                 </div>
+                
               </div>
             </div>
             <!--Footer-->
