Removed unneeded spacing

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
           </div>
         </div>
       </nav>
-
     </header>
     <!--Main-->
     <main class="pt-20">
@@ -139,18 +138,12 @@
                 </div>
               </div>
             </div>
-
             <!--Projects-->
             <div class="p-10 mb-10">
               <h1 id="projects" class="text-3xl font-bold mb-10">Projects</h1>
               <!--Projects in figma-->
               <p class="p-5 text-2xl font-semibold">Figma</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                <!---->
-                <!---->
-                <!--WIP-->
-                <!---->
-                <!---->
                 <!--Playlist cover-->
                 <div class="tabs">
                   <button id="default2" class="tablinks" onclick="aboutSec(event, 'covers')">
@@ -160,7 +153,6 @@
                     </div>
                   </button>
                 </div>
-
                 <!--Music Player-->
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'mPlayer')">
@@ -170,7 +162,6 @@
                     </div>
                   </button>
                 </div>
-
                 <!--Portfolio-->
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'portfolio')">
@@ -181,7 +172,6 @@
                   </button>
                 </div>
               </div>
-
               <!--Content-->
               <div id="covers" class="tabcontent p-10">
                 <img class="rounded-md mx-auto pb-5" src="images/Playlist Covers.png" alt="Picture of Spotify playlist covers" width="350">
@@ -189,14 +179,12 @@
                   elements. This is a project I did for fun to make custom spotify playlist covers. 
                 </p>
               </div>
-
               <div id="mPlayer" class="tabcontent p-10">
                 <img class="rounded-md mx-auto pb-5" src="images/Music Player.png" alt="Music Player Mock up" width="500">
                 <p>I used figma and thier prototyping feature to design a rough mock up
                   of a music streaming service. I mainly did this to test out animations and UI design.
                 </p>
               </div>
-
                 <div id="portfolio" class="tabcontent p-10">
                   <img class="rounded-md mx-auto pb-5" src="images/Portfolio (mobile).png" alt="Website Portfolio Mobile Version" width="400">
                   <p>I used figma to design the portfolio you are currently on. 
@@ -205,11 +193,9 @@
                     a framework of how I wanted it to look like roughly.
                   </p>
                 </div>
-
               <!--Projects in Code-->
               <p class="p-5 text-2xl font-semibold mt-10">Code</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-
                 <!--Game of life-->
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'conway')">
@@ -219,7 +205,6 @@
                     </div>
                   </button>
                 </div>
-
                 <!--Discord bot-->
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'discordBot')">
@@ -229,7 +214,6 @@
                     </div>
                   </button>
                 </div>
-
                 <!--Postogon-->
                 <div class="tabs">
                   <button class="tablinks" onclick="aboutSec(event, 'postogonSet')">
@@ -240,7 +224,6 @@
                   </button>
                 </div>
               </div>
-
               <!--Content-->
               <div id="conway" class="tabcontent p-10">
                 <p>
@@ -252,7 +235,6 @@
                   trying to solve.
                 </p>
               </div>
-
               <div id="discordBot" class="tabcontent p-10">
                 <p>
                   <b class="text-red-600">Work In Progress</b>
@@ -263,7 +245,6 @@
                   and understand how to read json files. I haven't finished development of it yet.
                 </p>
               </div> 
-
               <div id="postogonSet" class="tabcontent p-10">
                 <img class="rounded-md mx-auto pb-5" src="images/Settings (full).png" alt="Settings image" width="200">
                 <p>
@@ -272,7 +253,6 @@
                   I was able to learn Tailwind CSS and PHP (for decoupling the front and back end).
                 </p>
               </div>
-
             </div>
 
             <!--Work Experience-->
@@ -280,8 +260,8 @@
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <!--Job tabs (Fullscreen)-->
+                <!--Allstate-->
                 <div class="fullScreen">
-                  <!--Allstate-->
                   <button class="tabHeader" onclick="workSec(event, 'allstate')">
                     <div class="hover:text-green-300">
                       <div>
@@ -291,9 +271,8 @@
                     </div>
                   </button>
                 </div>
-
+                <!--Apple-->
                 <div class="fullScreen">
-                  <!--Apple-->
                   <button class="tabHeader" onclick="workSec(event, 'apple')">
                     <div class="hover:text-green-300">
                       <div>
@@ -305,10 +284,9 @@
                     </div>
                   </button>
                 </div>
-
+                <!--Postogon-->
                 <div class="fullScreen">
-                  <!--Postogon-->
-                  <button class="tabHeader" onclick="workSec(event, 'apple')">
+                  <button class="tabHeader" onclick="workSec(event, 'postogon')">
                     <div class="hover:text-green-300">
                       <div>
                         <div class="w-40 h-40 rounded-full bg-white mx-auto">
