Created tab overlay. Adding my style later

--- a/index.html
+++ b/index.html
@@ -258,19 +258,29 @@
             <!--Work Experience-->
             <div class="bg-blue-600 text-white rounded-lg p-10">
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
-              <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                <!--Job tabs (Fullscreen)-->
-                <!--Allstate-->
-                <div class="fullScreen bg-blue-600">
-                  <button class="tabHeader" onclick="workSec(event, 'allstate')">
-                    <div class="hover:text-green-300">
-                      <div>
-                        <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
-                      </div>
-                      <p class="pt-2 text-lg">Allstate</p>
-                    </div>
-                  </button>
+              <div id="workTab" class="fullScreen bg-blue-600">
+
+                <!-- Button to close the overlay navigation -->
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="fullscreen-content">
+                  <p>Test text will be to display in overlay tab</p>
+                  <p>Test text will be to display in overlay tab</p>
+                  <p>Test text will be to display in overlay tab</p>
+                  <p>Test text will be to display in overlay tab</p>
                 </div>
+              </div>
+
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
+                <!--Job tabs (Overlay)-->
+                <!--Allstate-->
+                <button class="tabHeader" onclick="workSecOpen(event, 'allstate')">
+                  <div class="hover:text-green-300">
+                    <div>
+                      <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
+                    </div>
+                    <p class="pt-2 text-lg">Allstate</p>
+                  </div>
+                </button>
 
                 <!--Apple-->
                 <div class="fullScreen bg-blue-600">
@@ -382,6 +392,18 @@
         evt.currentTarget.className += " active";
       }
       document.getElementById("default").click(); /*Opens by default*/
+      </script>
+      <script>
+        /*Controls Overlay for tabs*/
+        /*Opens*/
+        function workSecOpen() {
+          document.getElementById("workTab").style.display = "block";
+        }
+
+        /*Closes*/
+        function closeNav() {
+          document.getElementById("workTab").style.display = "none";
+        }
       </script>
   </body>
 </html>
