--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <!--Tab Overlay-->
               <div id="overlay1" onclick="off1()">
-                <div id="format" class="bg-blue-600 m-20 md:m-40 p-20 rounded-lg">
-                  <div>
+                <div id="format" class="bg-blue-600 m-20 md:m-40 p-10 rounded-lg">
+                  <div class="p-10">
                     <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                   </div>
                   <p class="text-white text-xl pt-2">Actively contribute as a software engineer on the CTS XP (Claims Technology Accelerated Program) team</p>
@@ -272,21 +272,27 @@
 
               <div id="overlay2" onclick="off2()">
                 <div id="format" class="bg-blue-600 m-20 md:m-40 p-10 rounded-lg">
-                  <div>
+                  <div class="p-10">
                     <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
                   </div>
-                  <p class="text-white text-xl pt-2">Overlay2</p>
+                  <p class="text-white text-xl pt-2">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
+                  <p class="text-white text-xl pt-2">Maintaining visual merchandising and assisting team members</p>
+                  <p class="text-white text-xl pt-2">Ready to apply my learning in customer interactions</p>
                 </div>
               </div>
 
               <div id="overlay3" onclick="off3()">
                 <div id="format" class="bg-blue-600 m-20  md:m-40 p-10 rounded-lg">
-                  <div class="w-40 h-40 rounded-full bg-white mx-auto">
-                    <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                    <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                    </svg>
+                  <div class="p-10">
+                    <div class="w-40 h-40 rounded-full bg-white mx-auto">
+                      <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
+                      <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
+                      </svg>
+                    </div>
                   </div>
-                  <p class="text-white text-xl pt-2">Overlay3</p>
+                  <p class="text-white text-xl pt-2">Follow agile methodology to develop and test new features</p>
+                  <p class="text-white text-xl pt-2">Utilize Figma to storyboard visualizations for front end development</p>
+                  <p class="text-white text-xl pt-2">Create documentation to streamline development</p>
                 </div>
               </div>
 
