Trying to make responsive

--- a/index.html
+++ b/index.html
@@ -260,29 +260,29 @@
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <!--Tab Overlay-->
               <div id="overlay1" onclick="off1()">
-                <div id="format" class="bg-blue-600 m-20 md:m-40 p-10 rounded-lg">
+                <div id="format" class="bg-blue-600 m-5 md:m-auto md:w-1/2 p-10 rounded-lg">
                   <div class="p-10">
                     <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                   </div>
-                  <p class="text-white text-xl pt-2">Actively contribute as a software engineer on the CTS XP (Claims Technology Accelerated Program) team</p>
-                  <p class="text-white text-xl pt-2">Attend weekly team ceremonies and deliver software</p>
-                  <p class="text-white text-xl pt-2">Paired programming and test driven development.</p>
+                  <p class="text-white text-lg pt-5">Actively contribute as a software engineer on the CTS XP (Claims Technology Accelerated Program) team</p>
+                  <p class="text-white text-lg pt-5">Attend weekly team ceremonies and deliver software</p>
+                  <p class="text-white text-lg pt-5">Paired programming and test driven development.</p>
                 </div>
               </div>
 
               <div id="overlay2" onclick="off2()">
-                <div id="format" class="bg-blue-600 m-20 md:m-40 p-10 rounded-lg">
+                <div id="format" class="bg-blue-600 m-5 md:m-40 p-10 rounded-lg">
                   <div class="p-10">
                     <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
                   </div>
-                  <p class="text-white text-xl pt-2">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
-                  <p class="text-white text-xl pt-2">Maintaining visual merchandising and assisting team members</p>
-                  <p class="text-white text-xl pt-2">Ready to apply my learning in customer interactions</p>
+                  <p class="text-white text-lg pt-5">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
+                  <p class="text-white text-lg pt-5">Maintaining visual merchandising and assisting team members</p>
+                  <p class="text-white text-lg pt-5">Ready to apply my learning in customer interactions</p>
                 </div>
               </div>
 
               <div id="overlay3" onclick="off3()">
-                <div id="format" class="bg-blue-600 m-20  md:m-40 p-10 rounded-lg">
+                <div id="format" class="bg-blue-600 m-5 md:m-40 p-10 rounded-lg">
                   <div class="p-10">
                     <div class="w-40 h-40 rounded-full bg-white mx-auto">
                       <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
@@ -290,9 +290,9 @@
                       </svg>
                     </div>
                   </div>
-                  <p class="text-white text-xl pt-2">Follow agile methodology to develop and test new features</p>
-                  <p class="text-white text-xl pt-2">Utilize Figma to storyboard visualizations for front end development</p>
-                  <p class="text-white text-xl pt-2">Create documentation to streamline development</p>
+                  <p class="text-white text-lg pt-5">Follow agile methodology to develop and test new features</p>
+                  <p class="text-white text-lg pt-5">Utilize Figma to storyboard visualizations for front end development</p>
+                  <p class="text-white text-lg pt-5">Create documentation to streamline development</p>
                 </div>
               </div>
 
@@ -332,7 +332,6 @@
                     </div>
                   </button>
                 </div>
-                
               </div>
             </div>
             <!--Footer-->
