Removed Allstate overlay changes

--- a/index.html
+++ b/index.html
@@ -259,8 +259,9 @@
             <div class="bg-blue-600 text-white rounded-lg p-10">
               <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <!--Tab Overlay-->
+              <!--Allstate (Overlay)-->
               <div id="overlay1" onclick="off1()">
-                <div id="format" class="bg-blue-600 m-5 md:m-auto md:w-1/2 p-10 rounded-lg">
+                <div id="format" class="bg-blue-600 m-5 md:m-40 p-10 rounded-lg">
                   <div class="p-10">
                     <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                   </div>
@@ -269,7 +270,7 @@
                   <p class="text-white text-lg pt-5">Paired programming and test driven development.</p>
                 </div>
               </div>
-
+              <!--Apple (Overlay)-->
               <div id="overlay2" onclick="off2()">
                 <div id="format" class="bg-blue-600 m-5 md:m-40 p-10 rounded-lg">
                   <div class="p-10">
@@ -280,7 +281,7 @@
                   <p class="text-white text-lg pt-5">Ready to apply my learning in customer interactions</p>
                 </div>
               </div>
-
+              <!--Postogon (Overlay)-->
               <div id="overlay3" onclick="off3()">
                 <div id="format" class="bg-blue-600 m-5 md:m-40 p-10 rounded-lg">
                   <div class="p-10">
