--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
               </div>
               <!--Content-->
               <div id="About" class="tabcontent">
-                <p class="mb-20 px-10">Hello! My name is Oke Amuwha. I am currently a junior at Wayne State University pursuing 
+                <p class="mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a junior at Wayne State University pursuing 
                   my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                   full stack development or UI/UX design.
                 </p>
               </div>
               <div id="Interests" class="tabcontent">
-                <p class="mb-20 px-10">I've always had an interest in how and why stuff just seems to work.
+                <p class="mb-20 md:px-10">I've always had an interest in how and why stuff just seems to work.
                   When I was younger I would always look up at the stars in amazement at whats out there. Constantly
                   learning about deep space and the mysteries thats out there. 
                   Nowawdays I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
@@ -87,7 +87,7 @@
                 </p>
               </div>
               <div id="Hobbies" class="tabcontent">
-                <p class="mb-20 px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
+                <p class="mb-20 md:px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
                   Sometimes in the midst of that excitement I end up taking a lot longer to finish the project or focusing on something else
                   something else that catches my interests. I also like watching educational youtubers like Veritasium or Vsauce
                   The way they're able to explain advanced concepts in an interactive and relatable way reinforces my love for learning.
