Changed to a lighter color accent and more consistent colors

--- a/index.html
+++ b/index.html
@@ -97,52 +97,52 @@
             </div>
             <!--Skills-->
             <h1 id="skills" class="text-3xl text-left text-blue-600 font-bold pt-5 ml-10">Skills</h1>
-            <div class="bg-blue-600 text-white rounded-xl p-10 m-5">
+            <div class="bg-white text-black rounded-xl p-10 m-5">
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--C++-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/C++.svg" alt="C++" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/C++.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--HTML-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/HTML.svg" alt="HTML" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/HTML.svg" alt="HTML" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/Python.svg" alt="Python" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/Python.svg" alt="Python" width="80">
                   <p class="pt-2 text-lg">Python</p>
                 </div class="">
                 <!--Java-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/Java.svg" alt="Java" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/Java.svg" alt="Java" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/Github.svg" alt="Github" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/Github.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
                 </div class="mb-5">
                 <!--Figma-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/Figma.svg" alt="Figma" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/Figma.svg" alt="Figma" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
                   <p class="pt-2 text-lg">Tailwindcss</p>
                 </div>
                 <!--PHP-->
                 <div class="mb-5">
-                  <img class="rounded-full mx-auto" src="images/PHP.svg" alt="React" width="80">
+                  <img class="rounded-full border border-black mx-auto" src="images/PHP.svg" alt="React" width="80">
                   <p class="pt-2 text-lg">PHP</p>
                 </div>
               </div>
             </div>
             <!--Projects-->
-            <h1 id="projects" class="text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
+            <h1 id="projects" class="text-blue-600 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
             <div class="bg-white rounded-xl p-10 m-5">
               <div class="mb-10">
                 <!--Projects in figma-->
@@ -259,10 +259,9 @@
                 </div>
               </div>
             </div>
-
             <!--Work Experience-->
             <h1 id="experience" class="text-3xl text-left text-blue-600 font-bold pt-5 ml-10">Work Experience</h1>
-            <div class="bg-blue-600 text-white rounded-lg p-10 m-5">
+            <div class="bg-white text-black rounded-lg p-10 m-5">
               <!--Tab Overlay-->
               <!--Allstate (Overlay)-->
               <div id="overlay1" onclick="off1()">
@@ -301,48 +300,41 @@
                   <p class="text-white text-lg pt-5">Create documentation to streamline development</p>
                 </div>
               </div>
-
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <!--Allstate-->
                 <button onclick="on1()">
                   <div class="hover:text-green-300">
                     <div>
-                      <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
+                      <img class="rounded-full border border-black mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                     </div>
                     <p class="pt-2 text-lg">Allstate</p>
                   </div>
                 </button>
-
                 <!--Apple-->
-                <div class="fullScreen bg-blue-600">
-                  <button class="tabHeader" onclick="on2()">
-                    <div class="hover:text-green-300">
-                      <div>
-                        <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
-                      </div>
-                      <p class="pt-2 text-lg">Apple</p>
+                <button class="tabHeader" onclick="on2()">
+                  <div class="hover:text-green-300">
+                    <div>
+                      <img class="rounded-full border border-black mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
                     </div>
-                  </button>
-                </div>
-
+                    <p class="pt-2 text-lg">Apple</p>
+                  </div>
+                </button>
                 <!--Postogon-->
-                <div class="fullScreen bg-blue-600">
-                  <button class="tabHeader" onclick="on3()">
-                    <div class="hover:text-green-300">
-                      <div class="w-40 h-40 rounded-full bg-white mx-auto">
-                        <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
-                        <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
-                        </svg>
-                      </div>
-                      <p class="pt-2 text-lg">Postogon</p>
+                <button class="tabHeader" onclick="on3()">
+                  <div class="hover:text-green-300">
+                    <div class="w-40 h-40 border border-black rounded-full bg-white mx-auto">
+                      <svg aria-label="Home" class="relative top-5 mx-auto" id="logo" width="125" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 601 572">
+                      <path d="M549.528 354.832C587.161 317.204 549.528 231.128 549.528 163.867C549.528 96.6061 525.301 139.644 473.555 87.9045C421.81 36.1652 428.395 77.7918 374.533 23.936C320.67 -29.9199 277.627 23.936 199.773 23.936C121.684 23.936 59.824 163.867 59.824 163.867C-93.5319 163.867 104.278 326.611 38.4201 392.461C-27.4383 458.311 108.277 462.309 183.544 537.566C258.81 612.823 342.309 537.566 438.98 537.566C535.886 537.566 417.576 427.267 549.293 427.267C681.48 427.502 511.894 392.461 549.528 354.832ZM426.043 357.184C359.715 357.184 419.222 412.686 370.534 412.686C321.846 412.686 279.744 450.55 241.875 412.686C204.007 374.822 135.561 372.706 168.725 339.546C201.89 306.385 102.397 224.308 179.545 224.308C179.545 224.308 210.593 153.755 250.108 153.755C289.387 153.755 311.026 126.709 338.075 153.755C365.124 180.8 361.831 159.869 387.94 185.974C414.048 212.079 426.278 190.442 426.278 224.308C426.278 258.174 445.33 301.447 426.278 320.496C406.991 339.546 492.372 357.184 426.043 357.184Z"></path>
+                      </svg>
                     </div>
-                  </button>
-                </div>
+                    <p class="pt-2 text-lg">Postogon</p>
+                  </div>
+                </button>
               </div>
             </div>
             <!--Footer-->
             <footer>
-              <h1 class="text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
+              <h1 class="text-blue-600 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
               <div class="bg-white rounded-xl p-10 m-5">
                 <div class="p-4 mb-5">
                   <div class="flex flex-row justify-center">
